Removed InfoNav (will not be used) fixed scroll overflow on long mesgs

--- a/src/components/layout/controlPanel/panel.css
+++ b/src/components/layout/controlPanel/panel.css
@@ -19,10 +19,6 @@
 }
 
 @media only screen and (max-width: 1030px) {
-  .control-panel {
-    width: 75vw;
-  }
-
   .control-panel_selected-message_btn-close p {
     opacity: 1 !important;
   }
@@ -103,8 +99,10 @@
 .control-panel_selected-message {
   font-size: 16px;
   padding: 1em;
-  width: 70%;
+  width: 100%;
+  height: auto;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .control-panel_no-message {
@@ -122,8 +120,9 @@
 }
 
 .control-panel_selected-message_message-content {
-  margin: 3% 0 0 0;
-  font-size: 2.4em;
+  margin: 3% 0 7% 0;
+  height: auto;
+  font-size: 1.1em;
   color: #e8e7f4;
 }
 
